changes to index

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,23 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-<title>Page Name</title>
-</head>
-<body><p>Hello</p></body>
+    <head>
+        <title>Selleck's Amazing Website</title>
+    </head>
+
+      <body>
+        <div id="all-contents"> 
+            <nav>
+            </nav>
+
+                <main>
+                <div class="sidebar">
+                </div>
+
+                <div class="content">
+                	<h2>M.Selleck</h2>
+                	<p>Developer / Designer</p>
+                </div>
+            </main>
+        </div>
+    </body>
 </html>
