--- a/index.htm
+++ b/index.htm
@@ -2,20 +2,40 @@
 <html>
     <head>
         <title>Selleck's Amazing Website</title>
+        
+        
+         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
       <body>
         <div id="all-contents"> 
             <nav>
+            	<ul>
+                    <li><a href="index.htm">Home</a></li>
+                    <li><a href="portfolio.htm">Portfolio</a></li>
+                </ul>
             </nav>
 
                 <main>
                 <div class="sidebar">
+                	 <img src="http://www.pyog.com/images/pyog_mini_outline.png" alt="">
                 </div>
 
                 <div class="content">
                 	<h2>M.Selleck</h2>
                 	<p>Developer / Designer</p>
+                	        <section class="interests">
+                        <header>Interests</header>
+                        <ul>
+                        	 <li>Programming</li>
+                            <li>3d Modeling and Design</li>
+                            <li>History</li>
+                            <li>Cognition </li>
+                            <li>Person to Computer Interfaces </li>
+                            <li>Social Growth</li>
+                             <li>Teaching </li>
+                        </ul>
+                    </section>
                 </div>
             </main>
         </div>
