updated title on index page

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Selleck's Amazing Website</title>
+        <title>Selleck's Simple Website</title>
         
         
          <link rel="stylesheet" type="text/css" href="style.css">
@@ -24,16 +24,16 @@
                 <div class="content">
                 	<h2>M.Selleck</h2>
                 	<p>Developer / Designer</p>
-                	        <section class="interests">
+                	   <section class="interests">
                         <header>Interests</header>
                         <ul>
-                        	 <li>Programming</li>
+                        	<li>Programming</li>
                             <li>3d Modeling and Design</li>
                             <li>History</li>
                             <li>Cognition </li>
                             <li>Person to Computer Interfaces </li>
                             <li>Social Growth</li>
-                             <li>Teaching </li>
+                            <li>Teaching</li>
                         </ul>
                     </section>
                 </div>
