change links to resolve portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
                 <header>Michael's Simple Website</header>
             	<ul>
                     <li><a href="index.htm">Home</a></li>
-                    <li><a href="portfolio.htm">Portfolio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
 <main>
