--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
             <nav>
             	<ul>
                     <li><a href="index.htm">Home</a></li>
-                    <li><a href="portfolio.htm">Portfolio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
 
