--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Selleck's Simple Website</title>
+   
         
         
          <link rel="stylesheet" type="text/css" href="style.css">
@@ -10,6 +11,7 @@
       <body>
         <div id="all-contents"> 
             <nav>
+                  <header>Mx. Selleck's Website</header>
             	<ul>
                     <li><a href="index.htm">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
