Updated index for image

--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
 
                 <main>
                 <div class="sidebar">
-                	 <img src="http://www.pyog.com/images/pyog_mini_outline.png" alt="">
+                	 <a href="https://xthing.github.io/img/demo_me.jpg" alt="" target="_blank"><img src="img/demo_me.jpg" alt=""></a>
                 </div>
 
                 <div class="content">
