--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
    
         
         
-         <link rel="stylesheet" type="text/css" href="style.css">
+         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
       <body>
@@ -15,6 +15,7 @@
             	<ul>
                     <li><a href="index.htm">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="studies.html">Studies</a></li>
                 </ul>
             </nav>
 
