--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <title>Selleck's Simple Website</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     
 </head>
 
@@ -13,6 +13,7 @@
             	<ul>
                     <li><a href="index.htm">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="studies.html">Studies</a></li>
                 </ul>
             </nav>
 <main>
